# rss-downloader

./: .gitignore  CHANGELOG.md  README.md  config.example.yaml  justfile  package.json  pyproject.toml  tailwind.config.js
src/rss_downloader/: __init__.py  app.py  config.py  database.py  downloaders.py  logger.py  main.py  models.py  parser.py  services.py  web.py
src/rss_downloader/static/css/: output.css
src/rss_downloader/templates/: config.html  index.html
tests/: conftest.py  test_config.py  test_database.py  test_downloaders.py  test_main_integration.py  test_models.py  test_parser.py  test_services.py  test_web.py  test_webhook.py
