[project]
name = "rss-downloader"
version = "0.1.2+compat"
description = "A Simple RSS Download Manager"
readme = "README.md"
authors = [
    {name = "GrassSand", email = "grasssand@users.noreply.github.com"},
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "pydantic~=1.10.22",
    "feedparser>=6.0.11",
    "loguru>=0.7.3",
    "pyyaml>=6.0.2",
    "qbittorrent-api>=2025.7.0",
    "requests>=2.32.5",
]

[project.optional-dependencies]
web = [
    "fastapi~=0.109.2",
    "jinja2~=3.0",
    "uvicorn[standard]~=0.17.6",
]

[project.scripts]
rss-downloader = "rss_downloader:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version+compat"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
