[project]
name = "rss-downloader"
version = "0.2.0+compat"
description = "A Simple RSS Download Manager"
readme = "README.md"
authors = [
    {name = "GrassSand", email = "grasssand@users.noreply.github.com"},
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "aiosqlite>=0.21.0",
    "anyio>=4.10.0",
    "feedparser>=6.0.11",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pydantic~=1.10.22",
    "pyyaml>=6.0.2",
    "qbittorrent-api>=2025.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-cov>=6.3.0",
    "respx>=0.22.0",
]

[project.optional-dependencies]
web = [
    "fastapi~=0.109.2",
    "jinja2~=3.0",
    "uvicorn[standard]~=0.17.6",
]

[project.scripts]
rss-downloader = "rss_downloader:main"

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.pyright]
include = ["src/rss_downloader", "tests"]
pythonVersion = "3.10"
pythonPlatform = "All"
typeCheckingMode ="standard"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "U", "C4", "B"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version+compat"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests"
pythonpath = "src"
addopts = "--color=yes --cov-report=term-missing --cov-report=html -ra"
filterwarnings = [
    "ignore:unclosed database:ResourceWarning",
]

[tool.coverage.run]
source = ["rss_downloader"]
omit = [
    "src/rss_downloader/__main__.py",
    "src/rss_downloader/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 85
